QueryDSL implementation into TaskService